# exam_scheduler

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/: CODEOWNERS  labeler.yml
.github/workflows/: ci.yml  labeler.yml
crates/core/: Cargo.toml
crates/core/src/: course.rs  lib.rs  scheduler.rs  student.rs
publication/: .gitignore  publication.typ
