[package]
name = "exam_scheduler"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
homepage = ""                                 #TODO
documentation = ""                            #TODO
repository = ""                               #TODO
authors = ["Matthew Mckee", "Varad Kulkarni"]
license = "MIT"

[dependencies]
