[workspace.package]
edition = "2024"
rust-version = "1.85"
homepage = ""                                 #TODO
documentation = ""                            #TODO
repository = ""                               #TODO
authors = ["Matthew Mckee", "Varad Kulkarni"]
license = "MIT"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
core = { path = "crates/core" }
